# jpgovsummary

./: .dockerignore  .env.local.sample  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
.cursor/: mcp.json
.cursor/agents/: commit-checklist.yaml  git-rules.yaml
.cursor/rules/: git-commit-and-push.mdc  git-commit-message-rules.mdc  python.json
.devcontainer/: devcontainer.json
docs/: phase1-completion-summary.md  phase1-token-analysis.md  phase2-completion-summary.md  plan-action-architecture-plan.md
scripts/: batch-summary.sh  compose-summary.sh  devcontainer-summary.sh
src/jpgovsummary/: __init__.py  __main__.py  agent.py  chatbot.py  config.py  jpgovwatcher.py  jpgovwatcher_v2.py  log.py  logger.py  main.py  meeting_information_collector.py  meeting_page_reader.orig.py  meeting_page_reader.py  model.py  property_formatter.py  property_writer.py  reporter.py  researcher.py  route_tools.py  state.py  state_v2.py  utils.py
src/jpgovsummary/agents/: __init__.py  action_executor.py  action_planner.py  agent.py  base_url_generator.py  bluesky_poster.py  document_summarizer.py  human_reviewer.py  main_content_extractor.py  meeting_page_reader.py  meeting_page_type_selector.py  overview_generator.py  overview_summarizer.py  report_enumerator.py  report_selector.py  summary_finalizer.py  summary_integrator.py  summary_writer.py
src/jpgovsummary/providers/: __init__.py  anthropic.py  base.py  gemini.py  ollama.py  openai.py
src/jpgovsummary/subagents/: __init__.py  document_type_detector.py  html_processor.py  meeting_summary_extractor.py  powerpoint_summarizer.py  word_summarizer.py
src/jpgovsummary/tools/: __init__.py  html_loader.py  meeting_url_collector.py  pdf_loader.py
tests/: test_document_type_detector.py  test_html_processor.py  test_ppt_summarizer.py  test_word_summarizer.py
tests/fixtures/: test_sample.html
