[tool.poetry]
name = "jpgovsummary"
version = "0.1.0"
description = "Tools for gov.jp documents"
authors = ["Miki Yutani <mkyutani@gmail.com>"]
license = "LICENSE"
readme = "README.md"
homepage = "https://github.com/mkyutani/jpgovsummary"
repository = "https://github.com/mkyutani/jpgovsummary"
keywords = ["government", "japan", "summary"]
packages = [{include = "jpgovsummary", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
beautifulsoup4 = "^4.12.3"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
pytest = "^8.3.4"
openai = "^1.63.2"
langchain-openai = "^0.3.6"
langchain-anthropic = "^0.3.6"
langchain-google-genai = "^2.0.13"
langchain-ollama = "^0.2.3"
langchain-community = "^0.3.18"
langgraph = "^0.2.74"

pypdf2 = "^3.0.1"
pycryptodome = "^3.23.0"
langchain-mcp-adapters = "^0.1.7"
prompt-toolkit = "^3.0.0"
lxml = ">=4.0.0,<6.0.0"
markitdown = "^0.1.3"
docling = "^2.55.1"
chardet = "^5.2.0"
ssky = "^0.2.9"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.12"

[tool.poetry.scripts]
jpgovsummary = "jpgovsummary.jpgovwatcher:main"

[tool.ruff]
# Python version compatibility
target-version = "py312"

# File patterns to include/exclude
extend-exclude = [
    "__pycache__",
    ".venv",
    "dist",
    "build",
    "*.egg-info",
]

# Line length
line-length = 100

[tool.ruff.lint]
# Enable specific rule sets
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
]

# Ignore specific rules
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
# Import sorting configuration
known-first-party = ["jpgovsummary"]

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"

# Use spaces around operators
indent-style = "space"

# Skip magic trailing comma
skip-magic-trailing-comma = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"